--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="app-container">
     <header class="main-header">
-        <span class="badge">Enterprise Edition</span>
+        <span class="badge">Azure Edition</span>
         <h1>AZURE INTEGRATED <br><strong>ATS RESUME ANALYSER</strong></h1>
         <div class="header-line"></div>
     </header>
