--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
             </button>
         </div>
 
-        <div id="result" class="result-panel hidden">
-            </div>
+       <div id="result" class="result-panel hidden">
+    <h3 id="score"></h3>
+    <ul id="tips"></ul>
+</div>
+
     </main>
 
     <footer class="creator-footer">
